# safe-api

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
scripts/: is_version_already_uploaded.sh
src/: lib.rs  traits.rs
src/unit_tests/: mod.rs  sponge_instance.rs
src/unit_tests/compilation/: consume.rs  consume.stderr  consume_head.rs  consume_head.stderr  normalize.rs  normalize.stderr  normalize_complex.rs  normalize_complex.stderr  sponge_bad_api.rs  sponge_bad_api.stderr  sponge_creation.rs  sponge_creation.stderr
