[package]
name = "extra-safe"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/huitseeker/safe-api"
keywords = ["zero-knowledge", "hashing", "sponge"]
description = "A trait hierarchy to help make the SAFE API return errors at compile time."
authors = ["François Garillot <francois@garillot.net>"]
license = "MIT"
readme = "../README.md"

[dependencies]
hybrid-array = "0.1.0"
typenum = "1.16.0"

[dev-dependencies]
trybuild = {version = "1.0.77", features = ["diff"]}
